--- a/lewis/ml_test_CV.ipynb
+++ b/lewis/ml_test_CV.ipynb
@@ -35,6 +35,7 @@
     "import xgboost as xgb\n",
     "#\n",
     "from blending import BlendedRegressor\n",
+    "from cleaning import TargetThresholdFilter\n",
     "#\n",
     "pd.set_option('display.max_columns', 500)  # force pandas to display all columns for better visual inspection\n",
     "# plot plots inline\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -65,9 +66,9 @@
    "outputs": [],
    "source": [
     "# Read training set into memory\n",
-    "# trn = pd.read_csv('../data/train.csv')\n",
+    "trn = pd.read_csv('../data/train.csv')\n",
     "# trn_10 = pd.read_csv('../data/train_10.csv', index_col=0)  # column #0 in our file is index\n",
-    "trn = pd.read_csv('../data/train_1.csv', index_col=0)\n",
+    "# trn_1 = pd.read_csv('../data/train_1.csv', index_col=0)\n",
     "\n",
     "# reading the MP values for training data\n",
     "MP_train = pd.read_csv('../data/MP_train.csv')"
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -92,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.0329 secs\n",
-      "(137652, 24) (63930, 24) 60870 130076\n"
+      "Time elapsed: 0.9736 secs\n",
+      "(13765201, 24) (6349375, 24) 731556 1180945\n"
      ]
     }
    ],
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.59058880806\n"
+      "16.4915289879\n"
      ]
     }
    ],
@@ -145,18 +146,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'minutes_past_mean', u'minutes_past_std', u'minutes_past_median',\n",
+       "       u'minutes_past_count', u'minutes_past_min', u'minutes_past_max',\n",
+       "       u'radardist_km_mean', u'radardist_km_std', u'radardist_km_median',\n",
+       "       u'radardist_km_count',\n",
+       "       ...\n",
+       "       u'Kdp_5x5_50th_count', u'Kdp_5x5_50th_min', u'Kdp_5x5_50th_max',\n",
+       "       u'Kdp_5x5_90th_mean', u'Kdp_5x5_90th_std', u'Kdp_5x5_90th_median',\n",
+       "       u'Kdp_5x5_90th_count', u'Kdp_5x5_90th_min', u'Kdp_5x5_90th_max',\n",
+       "       u'Expected_mean'],\n",
+       "      dtype='object', length=133)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trn_withRef_comb.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -169,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +257,7 @@
        "      dtype='object', length=132)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -280,20 +301,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "ttf = TargetThresholdFilter(threshold=np.log10(1+200))\n",
     "imp = Imputer(strategy='mean')  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "base1 = RandomForestRegressor(n_estimators=100, max_features='sqrt', max_depth=5, n_jobs=4)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
+    "base1 = RandomForestRegressor(n_estimators=10, max_features='sqrt', max_depth=5, n_jobs=4)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
     "base2 = LinearRegression()\n",
     "base3 = Ridge()\n",
     "blender = LinearRegression()\n",
     "blended = BlendedRegressor(base_models=(base1, base2, base3), blending_model=blender, blending_split=10)\n",
-    "pip = Pipeline([('imp',imp), ('ss',ss), ('clf',base2)])  # a Pipeline wrapper to chain'em up"
+    "pip = Pipeline([('ttf', ttf), ('imp',imp), ('ss',ss), ('clf', blender)])  # a Pipeline wrapper to chain'em up"
    ]
   },
   {
@@ -307,41 +329,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.1 Initialization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "scorer = make_scorer(MAE_logy, greater_is_better=True)  # define scoring metric"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3.2.2A: Single param value cv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# This is for getting a basic idea of how long it takes to run a single parameter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -351,11 +344,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:   15.3s finished\n"
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  3.3min finished\n"
      ]
     }
    ],
    "source": [
+    "scorer = make_scorer(MAE_logy, greater_is_better=True)  # define scoring metric\n",
     "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)"
    ]
   },
@@ -518,6 +512,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Different base model combinitions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -564,8 +565,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Threshold filtering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -574,16 +582,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.4251322521 1.63643231318\n"
+      "23.2747272334 1.58051217883\n"
      ]
     }
    ],
    "source": [
     "# Scores:\n",
     "# [mean, med, std, cnt], all feature, \n",
-    "# Filter-out null ref, log(1+Truth), impute with mean, (0,1) standardization, \n",
-    "# Blending: base: [RF with 100 tree, 'sqrt' features, depth=5], [linear regression], [ridge]; blender: linear regression\n",
+    "# Filter-out null ref, log(1+Truth), fitler-out > 20 in training set, impute with mean, (0,1) standardization, \n",
+    "# Blending: base: [RF with 10 tree, 'sqrt' features, depth=5], [linear regression], [ridge]; blender: linear regression\n",
     "print np.mean(scores), np.std(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.2708855142 1.58166060195\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scores:\n",
+    "# [mean, med, std, cnt], all feature, \n",
+    "# Filter-out null ref, log(1+Truth), fitler-out > 80 in training set, impute with mean, (0,1) standardization, \n",
+    "# Blending: base: [RF with 10 tree, 'sqrt' features, depth=5], [linear regression], [ridge]; blender: linear regression\n",
+    "print np.mean(scores), np.std(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.28848374 1.58172934802\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scores:\n",
+    "# [mean, med, std, cnt], all feature, \n",
+    "# Filter-out null ref, log(1+Truth), fitler-out > 200 in training set, impute with mean, (0,1) standardization, \n",
+    "# Blending: base: [RF with 10 tree, 'sqrt' features, depth=5], [linear regression], [ridge]; blender: linear regression\n",
+    "print np.mean(scores), np.std(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Different blender models "
    ]
   },
   {
