20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 neptune.20151120 ne

--- a/Shangxing/extraRandomTree.ipynb
+++ b/Shangxing/extraRandomTree.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "from sklearn.cross_validation import train_test_split\n",
     "from math import *\n",
     "from sklearn import metrics\n",
+    "from sklearn.ensemble import ExtraTreesRegressor\n",
     "#\n",
     "#pd.set_option('display.max_columns', 500)  # force pandas to display all columns for better visual inspection\n",
     "# plot plots inline\n",
@@ -30,24 +31,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "trn_all = pd.read_csv('../data/train.csv')  # column #0 in our file is index\n",
     "# trn_1 = pd.read_csv('../data/train_1.csv', index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#selected features and Cut off outliers of Expected >= 69\n",
-    "trn_new = trn_all[trn_all['Expected']<69]"
    ]
   },
   {
@@ -58,7 +47,8 @@
    },
    "outputs": [],
    "source": [
-    "#trn_new"
+    "#selected features and Cut off outliers of Expected >= 69\n",
+    "trn_new = trn_all[trn_all['Expected']<69]"
    ]
   },
   {
@@ -67,13 +57,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'Id', u'minutes_past', u'radardist_km', u'Ref', u'Ref_5x5_10th',\n",
+      "       u'Ref_5x5_50th', u'Ref_5x5_90th', u'RefComposite',\n",
+      "       u'RefComposite_5x5_10th', u'RefComposite_5x5_50th',\n",
+      "       u'RefComposite_5x5_90th', u'RhoHV', u'RhoHV_5x5_10th',\n",
+      "       u'RhoHV_5x5_50th', u'RhoHV_5x5_90th', u'Zdr', u'Zdr_5x5_10th',\n",
+      "       u'Zdr_5x5_50th', u'Zdr_5x5_90th', u'Kdp', u'Kdp_5x5_10th',\n",
+      "       u'Kdp_5x5_50th', u'Kdp_5x5_90th', u'Expected'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "#combine observations with same ID by using mean\n",
-    "#replace Nan by overall mean\n",
-    "trn_mean = trn_new.groupby(trn_new.Id).agg(['mean', 'median', 'std', 'count', 'min', 'max'])\n",
-    "trn_mean.columns = ['_'.join(col).strip() for col in trn_mean.columns.values]\n",
-    "trn_mean = trn_mean.drop(['Expected_count', 'Expected_median', 'Expected_std', 'Expected_min', 'Expected_max'], axis =1)"
+    "print(trn_new.columns)"
    ]
   },
   {
@@ -84,15 +85,57 @@
    },
    "outputs": [],
    "source": [
-    "# ignore id's where all Ref vales are NaN\n",
-    "trn_mean = trn_mean[pd.notnulla(trn_mean.Ref_mean)]"
+    "#combine observations with same ID by using mean\n",
+    "#replace Nan by overall mean\n",
+    "trn_mean = trn_new.groupby(trn_new.Id).agg(['mean', 'median', 'std', 'count', 'min', 'max'])\n",
+    "trn_mean.columns = ['_'.join(col).strip() for col in trn_mean.columns.values]\n",
+    "#trn_mean = trn_mean.drop(['Expected_count', 'Expected_median', 'Expected_std', 'Expected_min', 'Expected_max'], axis =1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'minutes_past_mean', u'minutes_past_median', u'minutes_past_std',\n",
+      "       u'minutes_past_count', u'minutes_past_min', u'minutes_past_max',\n",
+      "       u'radardist_km_mean', u'radardist_km_median', u'radardist_km_std',\n",
+      "       u'radardist_km_count',\n",
+      "       ...\n",
+      "       u'Kdp_5x5_90th_std', u'Kdp_5x5_90th_count', u'Kdp_5x5_90th_min',\n",
+      "       u'Kdp_5x5_90th_max', u'Expected_mean', u'Expected_median',\n",
+      "       u'Expected_std', u'Expected_count', u'Expected_min', u'Expected_max'],\n",
+      "      dtype='object', length=138)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(trn_mean.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# ignore id's where all Ref vales are NaN\n",
+    "trn_mean = trn_mean[pd.notnull(trn_mean.Ref_mean)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -104,20 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#trn_mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -128,29 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#X_trn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "clf = RandomForestRegressor(n_estimators=100,n_jobs=5)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number"
+    "clf = ExtraTreesRegressor(n_estimators=100, max_depth=None, min_samples_split=1, random_state=0, n_jobs=5)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "133.253954172\n"
+      "1312.01620913\n"
      ]
     }
    ],
@@ -172,10 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -198,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -215,21 +235,10 @@
     "test_result = pd.DataFrame()\n",
     "test_result['Id'] = test_new['Id'].unique()\n",
     "test_result = pd.merge(test_result, test_result_exist, how='left', on=['Id'], sort=True)\n",
-    "test_result.loc[test_result['Expected'].isnull(), 'Expected'] = marshall.loc[test_result['Expected'].isnull(), 'Expected']\n",
+    "#test_result.loc[test_result['Expected'].isnull(), 'Expected'] = marshall.loc[test_result['Expected'].isnull(), 'Expected']\n",
     "test_result.loc[test_result['Expected'].notnull(), 'Expected'] = 0.75*test_result.loc[test_result['Expected'].notnull(), 'Expected']+0.25*marshall.loc[test_result['Expected'].notnull(), 'Expected']\n",
     "\n",
-    "test_result.to_csv('../data/pks_result_v3_maxmin.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#test_result"
+    "test_result.to_csv('../data/extraRandom_result_11_19.csv', index=False)"
    ]
   },
   {
