--- a/Shangxing/Untitled1.ipynb
+++ b/Shangxing/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
     "    #combine observations with same ID by using mean\n",
     "    trn_mean = trn_new.groupby(trn_new.Id).agg(['mean', 'median', 'std', 'count','min','max'])\n",
     "    trn_mean.columns = ['_'.join(col).strip() for col in trn_mean.columns.values]\n",
-    "    trn_mean = trn_mean.drop(['Expected_count', 'Expected_median', 'Expected_std','Expected_min','Expected_max'], axis =1)\n",
+    "    #trn_mean = trn_mean.drop(['Expected_count', 'Expected_median', 'Expected_std','Expected_min','Expected_max'], axis =1)\n",
     "    #print(trn_mean)\n",
     "    # ignore id's where all Ref vales are NaN\n",
     "    trn_mean = trn_mean[pd.notnull(trn_mean.Ref_mean)]\n",
@@ -59,7 +59,7 @@
     "    test_mean= pd.DataFrame(imp.fit_transform(test_mean),index=test_mean.index,columns=index2)\n",
     "\n",
     "    test_X = test_mean.loc[:,'minutes_past_mean':'Kdp_5x5_90th_max'].values\n",
-    "    unique_ID = pd.unique(test_all['Id'])\n",
+    "    unique_ID = pd.unique(test_new['Id'])\n",
     "\n",
     "    return test_X,test_mean,unique_ID\n",
     "\n",
@@ -117,7 +117,7 @@
     "    test_result = pd.DataFrame()\n",
     "    test_result['Id'] = unique_ID\n",
     "    test_result = pd.merge(test_result, test_result_exist, how='left', on=['Id'], sort=True)\n",
-    "    test_result.loc[test_result['Expected'].isnull(), 'Expected'] = marshall.loc[test_result['Expected'].isnull(), 'Expected']\n",
+    "    #test_result.loc[test_result['Expected'].isnull(), 'Expected'] = marshall.loc[test_result['Expected'].isnull(), 'Expected']\n",
     "    test_result.loc[test_result['Expected'].notnull(), 'Expected'] = 0.75*test_result.loc[test_result['Expected'].notnull(), 'Expected']+0.25*marshall.loc[test_result['Expected'].notnull(), 'Expected']\n",
     "\n",
     "    test_result.to_csv(out_file, index=False)\n",
@@ -208,25 +208,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction with the best validation model\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'best_valid_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-0149947906c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mprocessed_test\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0munique_ID\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0mget_testing_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../data/test.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mxgmat_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDMatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtmp_predict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbest_valid_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxgmat_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mxgb_predict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmp_predict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'best_valid_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print('Prediction with the best validation model')\n",
+    "X_test,processed_test,unique_ID  = get_testing_data('../data/test.csv')\n",
+    "xgmat_test = xgb.DMatrix(X_test)\n",
+    "tmp_predict = best_valid_model.predict(xgmat_test)\n",
+    "xgb_predict = np.exp(tmp_predict)-1\n",
+    "\n",
+    "    # print(len(xgb_predict))\n",
+    "    # print(len(unique_ID))\n",
+    "\n",
+    "print('Writing the submission file')\n",
+    "out_file = '../data/xgb_result_v5_pure_allFeatures_2.csv'\n",
+    "export_submission(unique_ID,xgb_predict,processed_test, out_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "print('Prediction with the best validation model')\n",
-    "    X_test,processed_test,unique_ID  = get_testing_data('../data/test.csv')\n",
-    "    xgmat_test = xgb.DMatrix(X_test)\n",
-    "    tmp_predict = best_valid_model.predict(xgmat_test)\n",
-    "    xgb_predict = np.exp(tmp_predict)-1\n",
-    "\n",
-    "    # print(len(xgb_predict))\n",
-    "    # print(len(unique_ID))\n",
-    "\n",
-    "    print('Writing the submission file')\n",
-    "    out_file = '../data/xgb_result_v5_pure_allFeatures_2.csv'\n",
-    "    export_submission(unique_ID,xgb_predict,processed_test, out_file)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
